--- a/src/app/pages/admin/usuario/ui/user-list/user-list.component.html
+++ b/src/app/pages/admin/usuario/ui/user-list/user-list.component.html
@@ -1,82 +1,10 @@
+<div class="font-quicksand p-4 md:p-6 min-h-screen">
+  <!-- Table Section -->
 
-<div class="font-quicksand p-4 md:p-6  min-h-screen">
-    <!-- Table Section -->
-    <div class="mb-8">
-      <h2 class="text-2xl font-bold text-smoke-100 mb-4">Usuarios Registrados</h2>
-      <div class="overflow-x-auto rounded-lg shadow-lg">
-        <div class="min-w-full overflow-hidden">
-          <table class="w-full bg-smoke-950">
-            <thead class="bg-smoke-900">
-              <tr>
-                <th class="px-4 md:px-6 py-3 text-left text-xs md:text-sm font-semibold text-smoke-100">ID</th>
-                <th class="px-4 md:px-6 py-3 text-left text-xs md:text-sm font-semibold text-smoke-100">Nombre Comercial</th>
-                <th class="px-4 md:px-6 py-3 text-left text-xs md:text-sm font-semibold text-smoke-100 hidden sm:table-cell">Teléfono</th>
-                <th class="px-4 md:px-6 py-3 text-left text-xs md:text-sm font-semibold text-smoke-100 hidden md:table-cell">Cédula</th>
-                <th class="px-4 md:px-6 py-3 text-left text-xs md:text-sm font-semibold text-smoke-100">Rol</th>
-                <th class="px-4 md:px-6 py-3 text-left text-xs md:text-sm font-semibold text-smoke-100">Estado</th>
-              </tr>
-            </thead>
-            <tbody class="divide-y divide-smoke-700">
-              @for (datos of usuarios.value()?.data; track datos.id) {
-                <tr class="hover:bg-smoke-900 transition-colors">
-                  <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-200">{{datos.id}}</td>
-                  <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-200">{{datos.nombreComercial}}</td>
-                  <td [class]="'px-4 md:px-6 py-4 text-xs md:text-sm  hidden sm:table-cell' + (datos.telefono == null ? ' text-peel-300 font-medium' : ' text-smoke-300 font-medium')">{{datos.telefono || 'No registrado'}}</td>
+  @if (_screenService.isDesktop()) {
+  <app-table-usuarios [usuarios]="usuarios.value()"></app-table-usuarios>
+  } @if (_screenService.isMobile()) {
+  <app-card-usuarios [usuarios]="usuarios.value()"></app-card-usuarios>
 
-                  <td [class]="'px-4 md:px-6 py-4 text-xs md:text-sm  hidden md:table-cell' + (datos.cedula == null ? ' text-peel-300 font-medium' : ' text-smoke-300 font-medium')">{{datos.cedula || 'No registrado'}}</td>
-                  
-                  <td class="px-4 md:px-6 py-4 text-xs md:text-sm text-smoke-200">{{datos.rol.nombre}}</td>
-                  <td class="px-4 md:px-6 py-4">
-                    <span class="px-2 md:px-3 py-1 text-xs font-medium rounded-full bg-peel-900 text-peel-300"
-                     [class] = "datos.estado ? 'bg-peel-900 text-peel-300' : 'bg-red-950 text-smoke-300'"
-                    >
-                      {{datos.estado ? 'Activo' : 'Inactivo'}}
-                    </span>
-                  </td>
-                </tr>
-            }
-            
-             
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  
-
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Card 1 -->
-      <div class="rounded-lg shadow-lg bg-smoke-950 border border-smoke-900 hover:border-peel-500 hover:shadow-xl transition-colors hover:bg-smoke-900 ">
-        <div class="p-6">
-          <div class="flex items-center justify-between mb-4">
-            <div class="flex items-center space-x-3">
-              <div class="h-12 w-12 rounded-full bg-peel-950 flex items-center justify-center">
-                <span class="text-peel-300 text-xl font-bold">GR</span>
-              </div>
-              <div>
-                <h3 class="text-lg font-semibold text-smoke-100">Grecia Rojas</h3>
-                <p class="text-sm text-smoke-400">User</p>
-              </div>
-            </div>
-            <span class="h-3 w-3 rounded-full bg-peel-400"></span>
-          </div>
-          
-          <div class="space-y-3">
-            <div>
-              <p class="text-sm font-medium text-smoke-400">Email</p>
-              <p class="text-smoke-200 break-all">{{'grecia@gmail.com'}}</p>
-            </div>
-            <div>
-              <p class="text-sm font-medium text-smoke-400">Fecha de registro</p>
-              <p class="text-smoke-200">22 Enero, 2025</p>
-            </div>
-            <div>
-              <p class="text-sm font-medium text-smoke-400">Estado de la cuenta</p>
-              <p class="text-peel-300 font-medium">Activa</p>
-            </div>
-          </div>
-        </div>
-      </div>
-  
-      
-  </div>
+  }
+</div>
